:sparkles: Differential part ready.

--- a/Report/report.tex
+++ b/Report/report.tex
@@ -699,8 +699,21 @@ $$
 
 \subsection{光学微分}
 
+% 插入单张Data/003-pattern/differential.png
+\begin{figure}
+    \centering
+    \includegraphics[width=0.9\linewidth]{Data/003-pattern/differential.png}
+    \caption{光学微分实验结果图}
+    \label{fig:differential}
+\end{figure}
+
+实验中使用一个“S”型光阑作为物，在零级处可以看到其原始的形状；在$\pm 1$级处则可观察到作为目标的光学微分像：其沿竖直方向走行的边界均被突出，形成了明显的对比，但沿水平方向走行的边界则较为模糊。这是符合预期的，因为所使用的光栅的空间周期对应排布方向为水平方向，故而所提取的振幅微分是对水平方向取微分，最能突出的边界也就对应为竖直方向；相比之下，水平方向走行的边界并无明显对比。
+
+在$\pm 1$级之外，本实验中还可在$\pm 2$级处观察到相应的光学微分像，其特征与$\pm 1$级相似，但整体亮度与对比度均有所降低。
 
 \subsection{\texorpdfstring{$\theta$}{theta} 调制}
+
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %  参考文献
