--- a/Report/report.tex
+++ b/Report/report.tex
@@ -713,7 +713,30 @@ $$
 
 \subsection{\texorpdfstring{$\theta$}{theta} 调制}
 
+% Data/pseudo_colour.png为调制结果
+% Data/theta-modulation_diff_pattern为频谱面衍射图样
+\begin{figure*}
+    \centering
+    \begin{subfigure}[b]{0.4\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{Data/pseudo_colour.png}
+        \subcaption{像面彩色图像}
+        \label{fig:theta_modulation_image}
+    \end{subfigure}
+    \hspace{0.05\textwidth}
+    \begin{subfigure}[b]{0.4\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{Data/theta-modulation_diff_pattern.png}
+        \subcaption{频谱面衍射图样}
+        \label{fig:theta_modulation_spectrum}
+    \end{subfigure}
+    \caption{ $\theta$ 调制实验结果图}
+    \captionnamefont{\wuhao\bf\heiti}
+    \captiontitlefont{\wuhao\bf\heiti}
+    \label{fig:theta_modulation}
+\end{figure*}
 
+使用白光入射提供的物片，获得的频谱面信息如图\ref{fig:theta_modulation_spectrum}所示。通过遮挡比对，可分析出各个空间频率方向所对应的成像区域，并且制作滤波器，选择适当颜色光进行上色。这里选择将城楼门、天空、草地分别处理为红色、蓝色、绿色，所得到的像面图像如图\ref{fig:theta_modulation_image}所示。上色效果较好，验证了$\theta$调制的可行性。
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %  参考文献
