--- a/Report/report.bib
+++ b/Report/report.bib
@@ -1,51 +1,51 @@
 % 保存为 TempExample.bib
-@article{BAIBICH19882472,
-  title = {Giant Magnetoresistance of (001)Fe/(001)Cr Magnetic Superlattices},
-  author = {Baibich, M. N. and Broto, J. M. and Fert, A. and Nguyen Van Dau, F. and Petroff, F. and Etienne, P. and Creuzet, G. and Friederich, A. and Chazelas, J.},
-  journal = {Phys. Rev. Lett.},
-  volume = {61},
-  issue = {21},
-  pages = {2472--2475},
-  year = {1988},
-  month = {Nov},
-  doi = {10.1103/PhysRevLett.61.2472},
-  url = {https://link.aps.org/doi/10.1103/PhysRevLett.61.2472}
+@article{zhouLargescaleNeuromorphicOptoelectronic2021,
+  title = {Large-Scale Neuromorphic Optoelectronic Computing with a Reconfigurable Diffractive Processing Unit},
+  author = {Zhou, Tiankuang and Lin, Xing and Wu, Jiamin and Chen, Yitong and Xie, Hao and Li, Yipeng and Fan, Jingtao and Wu, Huaqiang and Fang, Lu and Dai, Qionghai},
+  year = {2021},
+  month = may,
+  journal = {Nature Photonics},
+  volume = {15},
+  number = {5},
+  pages = {367--373},
+  issn = {1749-4885, 1749-4893},
+  doi = {10.1038/s41566-021-00796-w},
+  urldate = {2025-09-29},
+  langid = {english},
+  file = {/Users/ericwang/Zotero/storage/PL76BA6U/Zhou 等 - 2021 - Large-scale neuromorphic optoelectronic computing with a reconfigurable diffractive processing unit.pdf}
 }
 
-@article{BINASCH19894828,
-  title = {Enhanced magnetoresistance in layered magnetic structures with antiferromagnetic interlayer exchange},
-  author = {Binasch, G. and Gr\"unberg, P. and Saurenbach, F. and Zinn, W.},
-  journal = {Phys. Rev. B},
-  volume = {39},
-  issue = {7},
-  pages = {4828--4830},
-  year = {1989},
-  month = {Mar},
-  doi = {10.1103/PhysRevB.39.4828},
-  url = {https://link.aps.org/doi/10.1103/PhysRevB.39.4828}
+@book{zhaoOptics2004_4F,
+    title = {光学},
+    series = {新概念物理学教程},
+    author = {赵凯华},
+    year = {2004},
+    publisher = {高等教育出版社},
+    address = {北京},
+    edition = {第2版},
+    isbn = {9787040155624},
+    page = {252}
 }
 
-@article{PARKIN19902304,
-  title = {Oscillations in exchange coupling and magnetoresistance in metallic superlattice structures: Co/Ru, Co/Cr, and Fe/Cr},
-  author = {Parkin, S. S. P. and More, N. and Roche, K. P.},
-  journal = {Phys. Rev. Lett.},
-  volume = {64},
-  issue = {19},
-  pages = {2304--2307},
-  year = {1990},
-  month = {May},
-  doi = {10.1103/PhysRevLett.64.2304},
-  url = {https://link.aps.org/doi/10.1103/PhysRevLett.64.2304}
+@book{zhaoOptics2004_theta,
+    title = {光学},
+    series = {新概念物理学教程},
+    author = {赵凯华},
+    year = {2004},
+    publisher = {高等教育出版社},
+    address = {北京},
+    edition = {第2版},
+    isbn = {9787040155624},
+    page = {254}
 }
 
-@article{DIENY1991,
-  title = {Giant magnetoresistive in soft ferromagnetic multilayers},
-  author = {Dieny, B. and Speriosu, V. S. and Parkin, S. S. P. and Gurney, B. A. and Wilhoit, D. R. and Mauri, D.},
-  journal = {Phys. Rev. B},
-  volume = {43},
-  pages = {1297--1300},
-  year = {1991},
-  month = {Jan},
-  doi = {10.1103/PhysRevB.43.1297},
-  url = {https://link.aps.org/doi/10.1103/PhysRevB.43.1297}
+@book{geModPhysLab2020opticInformation,
+  title = {近代物理实验},
+  author = {{葛惟昆}},
+  year = 2020,
+  publisher = {北京 : 清华大学出版社},
+  address = {北京},
+  abstract = {本书是在清华大学物理系开设的近代物理实验课程的基础上编写的。全书包括原子物理，现代光学与信息处理，凝聚态物理与技术，真空物理与技术，等离子体物理与技术，磁共振，现代实验技术及其他方面的实验。每个实验项目中比较详细叙述了有关的物理原理和实验方法，以利于自学。},
+  keywords = {--},
+  page = {146-158}
 }
