:construction: Pending final compilation checks

--- a/Report/report.bib
+++ b/Report/report.bib
@@ -15,7 +15,7 @@
   file = {/Users/ericwang/Zotero/storage/PL76BA6U/Zhou 等 - 2021 - Large-scale neuromorphic optoelectronic computing with a reconfigurable diffractive processing unit.pdf}
 }
 
-@book{zhaoOptics2004_4F,
+@book{zhaoOptics2004fourF,
     title = {光学},
     series = {新概念物理学教程},
     author = {赵凯华},
@@ -27,7 +27,7 @@
     page = {252}
 }
 
-@book{zhaoOptics2004_theta,
+@book{zhaoOptics2004theta,
     title = {光学},
     series = {新概念物理学教程},
     author = {赵凯华},
