--- a/Report/report.tex
+++ b/Report/report.tex
@@ -1,10 +1,10 @@
-\documentclass[draft]{Report/thuemp}
-% \documentclass{Report/thuemp}
+% \documentclass[draft]{RepNort/thuemp}
+\documentclass{Report/thuemp}
 \begin{document}
 
 % 标题，作者
 \emptitle{光学信息处理与傅里叶光学}
-\empauthor{王驰}{王合英}
+\empauthor{王驰}{孙文博}
 
 % 奇数页页眉 % 请在这里写出第一作者以及论文题目
 \fancyhead[CO]{{\footnotesize 王驰: 光学信息处理与傅里叶光学}}
@@ -24,7 +24,7 @@
 
 %%%%%%%%英文标题、作者、摘要、关键词
 \emptitleEn{Experiments of Modern Physics in Tsinghua University}
-\empauthorEn{Chi Wang}{Heying Wang}
+\empauthorEn{Chi Wang}{Wenbo Sun}
 \KeywordEn{Optical Information Processing, Fourier Optics, Spatial Filtering, Abbe Imaging, Diffraction, Convolution Theorem}
 
 \begin{empAbstractEn}
@@ -32,10 +32,9 @@ This experiment systematically investigated the fundamental principles of Fourie
 \end{empAbstractEn}
 
 %%%%%%%%首页角注，依次为实验时间、报告时间、学号、email
-\empfirstfoot{2025-05-18}{2025-05-25}{2022012259}{chi-wang22@mails.tsinghua.edu.cn}
+\empfirstfoot{2025-10-29}{2025-12-31}{2022012259}{chi-wang22@mails.tsinghua.edu.cn}
 \end{@twocolumnfalse}
-]
-%%%%%%%%！首页角注可能与正文重叠，请通过调整正文中第一页的\enlargethispage{-3.3cm}位置手动校准正文底部位置：
+]%%%%%%%%！首页角注可能与正文重叠，请通过调整正文中第一页的\enlargethispage{-3.3cm}位置手动校准正文底部位置：
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %  正文由此开始
 \wuhao 
@@ -160,7 +159,7 @@ This experiment systematically investigated the fundamental principles of Fourie
 本实验中，在物面放置以图片，在频谱面 F 处放置复合正弦光栅（$f_1=100\ \textrm{mm}^{-1}$, $f_2=102\ \textrm{mm}^{-1}$）作为空间滤波器，在像面 $\pm 1$ 级衍射像处，预期可观察到图像的微分效果。垂直于光轴缓慢平移复合光栅，寻找并记录使 $\pm 1$ 级像的边缘轮廓最清晰的位置，拍摄记录。
 
 \subsection{\texorpdfstring{$\theta$}{theta} 调制}
-$\theta$片由多块不同取向的一维光栅拼成。使用白光入射，频谱面上依各个光栅取向形成一系列不同颜色的衍射光斑阵列。在频谱面上叠加孔阵滤波器，在各个方向上保留适当颜色的$\pm 1$级衍射斑；在像面上将会看到，不同区域按照光栅取向和衍射斑所在方向进行对应，获得了相对应的颜色。
+$\theta$片由多块不同取向的一维光栅拼成。使用白光入射，频谱面上依各个光栅取向形成一系列不同颜色的衍射光斑阵列。在频谱面上叠加孔阵滤波器，在各个方向上保留适当颜色的$\pm 1$级衍射斑；在像面上将会看到，不同区域按照光栅取向和衍射斑所在方向进行对应，获得了相对应的颜色。\cite{zhaoOptics2004theta}
 
 本实验中，$\theta$片为一块由三个取向光栅拼成的风景图样，三个光栅取向两两互成 $60^\circ$ 角，空间频率均为 $100\ \textrm{mm}^{-1}$。同样使用硬纸打孔制作滤波器，在频谱面上仅允许三个方向的 $\pm 1$ 级衍射斑通过，在像面上观察并记录彩色图像。
 
