:bug: Fixed numbers

--- a/Report/report.tex
+++ b/Report/report.tex
@@ -19,7 +19,7 @@
 
 %%%%%%%%摘要
 \begin{empAbstract}
-本实验利用基于 4F 结构的光学系统，系统研究了傅里叶光学的基本原理及其在信息处理中的应用。通过观察一维光栅（$12\ \mathrm{line/mm}$）和二维正交光栅（“光”字屏）的夫琅禾费衍射图样，直观验证了会聚透镜的傅里叶变换性质，频谱面上的空间频率分布与物函数的周期和方向严格对应；利用自制滤波器（小孔、挡板、狭缝）实现了空间滤波，包括低通（图像模糊）、高通（边缘增强）及方向滤波（特定纹理提取）；通过复合光栅滤波器（$f_1=100\ \mathrm{line/mm}$, $f_2=102\ \mathrm{line/mm}$）观察到光学微分效应，突出了图像边缘；实验还通过两个卷积件的复合衍射，在频域验证了卷积定理；最后，利用 $\theta$ 调制片和白光光源实现了假彩色编码。实验结果直观地展示了在空间频域中处理信息的有效性，为光学计算和现代成像技术提供了实验基础。
+本实验利用基于 4F 结构的光学系统，系统研究了傅里叶光学的基本原理及其在信息处理中的应用。通过观察一维光栅（$12\ \textrm{mm}^{-1}$）和二维正交光栅（“光”字屏）的夫琅禾费衍射图样，直观验证了会聚透镜的傅里叶变换性质，频谱面上的空间频率分布与物函数的周期和方向严格对应；利用自制滤波器（小孔、挡板、狭缝）实现了空间滤波，包括低通（图像模糊）、高通（边缘增强）及方向滤波（特定纹理提取）；通过复合光栅滤波器（$f_1=100\ \textrm{mm}^{-1}$, $f_2=102\ \textrm{mm}^{-1}$）观察到光学微分效应，突出了图像边缘；实验还通过两个卷积件的复合衍射，在频域验证了卷积定理；最后，利用 $\theta$ 调制片和白光光源实现了假彩色编码。实验结果直观地展示了在空间频域中处理信息的有效性，为光学计算和现代成像技术提供了实验基础。
 \end{empAbstract}
 
 %%%%%%%%英文标题、作者、摘要、关键词
@@ -79,7 +79,7 @@ This experiment systematically investigated the fundamental principles of Fourie
  
 
 \subsection{空间成分滤波}
-使用一维光栅（$10\ \textrm{mm}^{-1}$），条纹沿竖直方向放置，构建物面光场。在频谱面 $F$ 处预期可观察到水平排列的衍射图样，也即物面光场的空间频率分布。
+使用一维光栅（$12\ \textrm{mm}^{-1}$），条纹沿竖直方向放置，构建物面光场。在频谱面 $F$ 处预期可观察到水平排列的衍射图样，也即物面光场的空间频率分布。
 
 使用硬纸打孔，按下列情况分别允许特定空间频率成分通过，在像面借助CCD观察并记录条纹间距和形貌的变化，进行比较：
 
